--- a/src/styles/Banner.css
+++ b/src/styles/Banner.css
@@ -1,12 +1,15 @@
 .banner {
   display: flex;
   justify-content: space-around;
-  margin-left: 15%;
+  margin-left: 20%;
   margin-right: 15%;
+  width: 60%;
+
 }
 @media (max-width: 425px) {
   .banner {
-    margin-left: 2%;
+    margin-left: 20%;
     margin-right: 2%;
+
   }
 }
