--- a/src/styles/Create.css
+++ b/src/styles/Create.css
@@ -2,6 +2,8 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+  margin-top: -150px;
+  
 }
 .create {
   display: flex;
@@ -32,9 +34,9 @@
   padding: 1em 2em;
   margin-bottom: 1.5em;
   background-color: rgba(0, 0, 0, 0.2);
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.6);
+  box-shadow: 0 0 10px #fa73d9;
   text-align: left;
-  font-style: italic;
+  
   font-size: 1.1em;
   justify-content: space-between;
   display: flex;
@@ -43,6 +45,7 @@
 }
 label {
   color: #fff;
+  opacity: 0.7;
 }
 .error {
   color: red;
@@ -53,7 +56,7 @@ textarea {
   width: 100%;
   padding: 0.5em 0.3em;
   margin: 0 -0.2em;
-  border: 1px solid #fa73d9;
+ 
   color: #fff;
   background-color: #222;
   box-shadow: 0 0 6px #fa73d9;
@@ -66,6 +69,7 @@ textarea {
     display: flex;
     flex-direction: row;
     /* justify-content: center; */
+    margin-top: 0px;
   }
   .lollyFormDiv {
     display: flex;
